--- a/App-Seller-Center3.html
+++ b/App-Seller-Center3.html
@@ -18,6 +18,8 @@
         <area shape="rect" coords="38,2328,1240,2523" alt="All" href="App-help.html">
         <area shape="rect" coords="38,2131,1240,2326" alt="All" href="App-User-Account8.html">
 
+        <area shape="rect" coords="38,2541,1240,2743" alt="All" href="App-User-Account8.html">
+
 
         <!-- ย้อนกลับ -->
         <area shape="rect" coords="0,129,122,257" alt="All" href="Home.html">
