--- a/Home-popup.html
+++ b/Home-popup.html
@@ -14,6 +14,7 @@
 
     <map name="workmap">
         <area shape="rect" coords="268,385,1019,1331" alt="All" href="Home.html">
+        <area shape="rect" coords="1001,343,1052,390" alt="All" href="Home.html">
 
     </map>
 
