updat seller center

--- a/App-Seller-Center3.html
+++ b/App-Seller-Center3.html
@@ -15,10 +15,17 @@
     <map name="workmap">
         <area shape="rect" coords="38,1143,1240,1338" alt="All" href="App-Seller-Center4.html">
         <area shape="rect" coords="38,1336,1240,1531" alt="All" href="App-Seller-Center6.html">
-        <area shape="rect" coords="38,2328,1240,2523" alt="All" href="App-help.html">
-        <area shape="rect" coords="38,2131,1240,2326" alt="All" href="App-User-Account8.html">
 
-        <area shape="rect" coords="38,2541,1240,2743" alt="All" href="App-User-Account8.html">
+        
+
+        <area shape="rect" coords="41,1552,1239,1754" alt="All" href="App-Seller-Center7.html">
+        <area shape="rect" coords="41,1753,1239,1939" alt="All" href="App-Seller-Center8.html">
+        <area shape="rect" coords="41,1944,1239,2130" alt="All" href="App-Seller-Center9.html">
+
+        <area shape="rect" coords="41,2322,1239,2508" alt="All" href="App-Seller-Center10.html">
+        <area shape="rect" coords="41,2515,1239,2701" alt="All" href="App-help.html">
+
+        <area shape="rect" coords="41,2738,1239,2924" alt="All" href="App-User-Account8.html">
 
 
         <!-- ย้อนกลับ -->
