--- a/App-Seller-Center2.html
+++ b/App-Seller-Center2.html
@@ -10,15 +10,18 @@
 </head>
 
 <body>
-    <img src="img/25052565/Home_แถบเมนูข้างล่าง/4 User Account/Login แล้ว/ขายสินค้ากับ save D (seller center)/seller center-2-100.jpg" alt="Seller Center2" usemap="#workmap">
+    <img src="img/25052565/Home_แถบเมนูข้างล่าง/4 User Account/Login แล้ว/ขายสินค้ากับ save D (seller center)/seller center-2-100.jpg"
+        alt="Seller Center2" usemap="#workmap">
 
     <map name="workmap">
         <area shape="rect" coords="652,2484,1240,2625" alt="All" href="App-Seller-Center3.html">
 
+        <area shape="rect" coords="960,148,1073,256" alt="All" href="App-Seller-Center11.html">
+
 
         <!-- ย้อนกลับ -->
         <area shape="rect" coords="0,129,122,257" alt="All" href="Home.html">
-        
+
     </map>
 
 </body>
