--- a/App-Seller-Center3.html
+++ b/App-Seller-Center3.html
@@ -10,13 +10,19 @@
 </head>
 
 <body>
-    <img src="img/25052565/Home_แถบเมนูข้างล่าง/4 User Account/Login แล้ว/ขายสินค้ากับ save D (seller center)/seller center-3-100.jpg" alt="Seller Center3" usemap="#workmap">
+    <img src="img/25052565/Home_แถบเมนูข้างล่าง/4 User Account/Login แล้ว/ขายสินค้ากับ save D (seller center)/seller center-3-100.jpg"
+        alt="Seller Center3" usemap="#workmap">
 
     <map name="workmap">
+
+        <!-- การขายของฉัน มาจากอื่นๆ -->
+        <area shape="rect" coords="670,629,1224,760" alt="All" href="App-Seller-Center3-2.html">
+        <area shape="rect" coords="1007,826,1162,1032" alt="All" href="App-Seller-Center3-2.html">
+
         <area shape="rect" coords="38,1143,1240,1338" alt="All" href="App-Seller-Center4.html">
         <area shape="rect" coords="38,1336,1240,1531" alt="All" href="App-Seller-Center6.html">
 
-        
+
 
         <area shape="rect" coords="41,1552,1239,1754" alt="All" href="App-Seller-Center7.html">
         <area shape="rect" coords="41,1753,1239,1939" alt="All" href="App-Seller-Center8.html">
@@ -27,10 +33,12 @@
 
         <area shape="rect" coords="41,2738,1239,2924" alt="All" href="App-User-Account8.html">
 
+        <area shape="rect" coords="960,148,1073,256" alt="All" href="App-Seller-Center11.html">
+
 
         <!-- ย้อนกลับ -->
         <area shape="rect" coords="0,129,122,257" alt="All" href="Home.html">
-        
+
     </map>
 
 </body>
