--- a/App-Seller-Center6-2.html
+++ b/App-Seller-Center6-2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="img/25052565/Home_แถบเมนูข้างล่าง/4 User Account/Login แล้ว/ขายสินค้ากับ save D (seller center)/seller center-6-100.jpg"
+    <img src="img/25052565/Home_แถบเมนูข้างล่าง/4 User Account/Login แล้ว/ขายสินค้ากับ save D (seller center)/seller center-6-2-100.jpg"
         alt="Seller Center1" usemap="#workmap">
 
     <map name="workmap">
@@ -18,8 +18,6 @@
         <area shape="rect" coords="626,799,1280,961" alt="All" href="App-Seller-Center1.html">
 
         <area shape="rect" coords="357,1074,925,1720" alt="All" href="App-Seller-Center2.html">
-
-        <area shape="rect" coords="42,1950,1234,2147" alt="All" href="App-Seller-Center6-2.html">
 
 
         <!-- ย้อนกลับ -->
