--- a/App-Seller-Center1.html
+++ b/App-Seller-Center1.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <img src="img/25052565/Home_แถบเมนูข้างล่าง/4 User Account/Login แล้ว/ขายสินค้ากับ save D (seller center)/seller center-1-100.jpg" alt="Seller Center1" usemap="#workmap">
+    <img src="img/25052565/Home_แถบเมนูข้างล่าง/4 User Account/Login แล้ว/ขายสินค้ากับ save D (seller center)/seller center-1-100.jpg"
+        alt="Seller Center1" usemap="#workmap">
 
     <map name="workmap">
         <area shape="rect" coords="0,799,654,961" alt="All" href="App-User-Account1.html">
@@ -18,10 +19,12 @@
 
         <area shape="rect" coords="357,1074,925,1720" alt="All" href="App-Seller-Center2.html">
 
+        <area shape="rect" coords="960,148,1073,256" alt="All" href="App-Seller-Center11.html">
+
 
         <!-- ย้อนกลับ -->
         <area shape="rect" coords="0,129,122,257" alt="All" href="Home.html">
-        
+
     </map>
 
 </body>
