--- a/App-Starwell6.html
+++ b/App-Starwell6.html
@@ -10,14 +10,17 @@
 </head>
 
 <body>
-    <img src="img/25052565/Home_แถบเมนูข้างล่าง/2 Shopping Cart/shopping cart-5-100.jpg" alt="Starwell5" usemap="#workmap">
+    <img src="img/25052565/Home_แถบเมนูข้างล่าง/2 Shopping Cart/shopping cart-5-100.jpg" alt="Starwell5"
+        usemap="#workmap">
 
     <map name="workmap">
         <area shape="rect" coords="946,2516,1240,2656" alt="All" href="App-Starwell5.html">
 
+        <area shape="rect" coords="658,964,1194,1091" alt="All" href="App-User-Account2.html">
+
         <!-- ย้อนกลับ -->
         <area shape="rect" coords="0,129,122,257" alt="All" href="Home.html">
-        
+
     </map>
 
 </body>
