--- a/App-Starwell3.html
+++ b/App-Starwell3.html
@@ -10,16 +10,19 @@
 </head>
 
 <body>
-    <img src="img/25052565/Home_แถบเมนูข้างล่าง/2 Shopping Cart/220503_Starwell_App_shoppingcart-1-100.jpg" alt="Starwell3" usemap="#workmap">
+    <img src="img/25052565/Home_แถบเมนูข้างล่าง/2 Shopping Cart/220503_Starwell_App_shoppingcart-1-100.jpg"
+        alt="Starwell3" usemap="#workmap">
 
     <map name="workmap">
         <area shape="rect" coords="946,2516,1240,2656" alt="All" href="App-Starwell4.html">
 
         <area shape="rect" coords="957,1342,1237,1931" alt="All" href="App-Starwell4.html">
 
+        <area shape="rect" coords="44,2358,1237,2485" alt="All" href="App-Starwell4-2.html">
+
         <!-- ย้อนกลับ -->
         <area shape="rect" coords="0,129,122,257" alt="All" href="Home.html">
-        
+
     </map>
 
 </body>
